Fix: System Extension for SpringPluginManager (#51)